--- a/20170622_ng_router.md
+++ b/20170622_ng_router.md
@@ -204,7 +204,9 @@ interface Resolve {
 }
 ```
 
-We can see that it accepts an `Obersvable`, a `Promise` or a concrete type `T`. 
+The `route` given is the current route activated, giving access to the data, component and params of the current route.
+The `state` is a tree representing the snapshot at this instant of the whole route tree. It can be used to traverse all child routes activated.
+The return type accepts an `Observable`, a `Promise` or a concrete type `T`. 
 For example we could have a title which requires dynamic data:
 
 ```
