--- a/20170622_ng_router.md
+++ b/20170622_ng_router.md
@@ -1,12 +1,13 @@
 # How to use the Angular Router
 
-Today we will see how to use the Angular Router. The router allows us to define routes which are transformed to urls which are then understood by the browser. Having routes allows us to create different categories and access points to our website. This post will be composed by 5 parts:
+Today we will see how to use the Angular Router. The router allows us to define routes which are transformed to urls which are then understood by the browser. Having routes allows us to create different categories and access points to our website. This post will be composed by 6 parts:
 
 1. Define routes
 2. Router outlet
 3. Special routes
 4. Data and ActivatedRoute
 5. Resolve guard
+6. CanXXX guards
 
 ## 1. Define routes
 
@@ -261,6 +262,60 @@ export class OnePageComponent implements OnInit {
       .data
       .pluck('myTitle');
   }
+}
+```
+
+## 6. CanXXX guards
+
+There are three other guards available, `canActivate`, `canActivateChild` and `canLoad`.
+`canActivate` and `canActivateChild` specify whether the route ca be activated.
+A common scenario is authentication verification which will be performed in the guard and if the user isn't authenticated, it will redirect to the login page.
+
+`canActivate` is used to decide whether the user is able to access the current route while `canActivateChild` decides if the user is able to access the child of the route where the guard is placed. Another difference is in the arguments given by the interfaces. For `canActivate`, we have access to the route:
+
+```
+export interface CanActivate {
+    canActivate(route: ActivatedRouteSnapshot, state: RouterStateSnapshot): Observable<boolean> | Promise<boolean> | boolean;
+}
+```
+
+While with `canActivateChild`, we have access to the child:
+
+```
+export interface CanActivateChild {
+    canActivateChild(childRoute: ActivatedRouteSnapshot, state: RouterStateSnapshot): Observable<boolean> | Promise<boolean> | boolean;
+}
+```
+
+Therefore the main difference is that in one we use the current route where the guard is placed on to decide whether the user is allowed to activate the route while in the other case, we use the child route where the guard is placed to decide.
+
+We have protected the route with `canActive` and `canActiveChild` but the modules which are protected are still imported into the app module therefore still loaded.
+There are instances where the module is very specific and targeted to a limited amount of users. In those cases, we can lazy load the module which will result in loading dynamically the module when the route is hit.
+This can be achieved using `loadChildren` and providing the path of the file containing the module to lazily load followed by `#MyModule`.
+
+```
+{
+  path: 'my-lazy-route',
+  loadChildren: './my-lazy-module/my-lazy-module.module#MyModule'
+}
+```
+
+Then we can remove the module import in the app module. The module will no longer be loaded on boot but only loaded on navigation to `my-lazy-route`.
+In this case, `canActive` will happen after we load the module. But what we actually want isn't to load and check but to directly prevent the module to be loaded for unauthorized users. This is where we can use `canLoad` which will prevent the module to be loaded.
+
+```
+{
+  path: 'my-lazy-route',
+  loadChildren: './my-lazy-module/my-lazy-module.module#MyModule'
+  canLoad: SomeGuard
+}
+```
+
+This `canLoad` is a service which must implement the `CanLoad` interface which allow to decide, based on the route, if the module should be loaded or not.
+
+```
+export interface CanLoad {
+    canLoad(route: Route): Observable<boolean> | Promise<boolean> | boolean;
 }
 ```
 
