--- a/20171007_orleans.md
+++ b/20171007_orleans.md
@@ -34,6 +34,7 @@ Before diving into how we can build an application, we will see some of the keyw
 __Grain__
 
 Grains are the heart of the application, business logic, validation of business logic and storage are handled from within the grain. It is the actor containing the business logic. A grain can be either stateless or stateful and can also have its state persisted. We interact with grains in a asynchronous fashion, any call is asynchronous and return a `Task`. It is also possible to have the grain return a value back to the caller.
+Concurrency is also handle by Orleans, every grain is ensure process request in a synchronous way. This makes thinking about the state within the grain much easier as there will never be concurrent threads modifying the grain state.
 
 __Silo__
 
@@ -56,3 +57,15 @@ The liveness is what defines how do silos know about other silos joining the clu
 Now that we had an overview of what elements compose an Orleans application, we can start to see how it works together.
 
 ## 3. How does it work?
+
+In an application, we usually talk about client and server. The client here would be the application needing to access the grains, for example an ASP.NET web app. And the server here would be the cluster.
+In the cluster, multiple silos will run, ideally more than three, which will be the composition of the cluster.
+When the client needs a grain, it will check for available gateways and request for it. 
+If the grain has not been activated in any silo, Orleans triggers an activation and return the newly activated grain instance. Subsequent calls trying to access this grain will then be directed to the silo where the grain is instantiated.
+
+Availability of silos gateways is provided by the membership table. The membership table is where the state of the cluster is stored. It contains the most up to date information about all silos in the cluster including their status, whether pending/joining/alive/dead and their last IAmAlive status representing the last time the silo stated that it was alive.
+Within the cluster, silos are responsible for checking if their siblings are still alive, if unresponsive, they will mark them as dead.
+_More details about the [protocol can be found on Orleans documentation](https://dotnet.github.io/orleans/Documentation/Runtime-Implementation-Details/Cluster-Management.html)._
+The membership table helps in notifying dead nodes but it also helps in notifying silos about new silos joining the cluster therefore making new gateways available to clients.
+Those concepts are the key for scalability, by spawning new silos, we can handle a very large amount of logic executed in grains scattered among silos which are separate process which could be running in different nodes (VMs).
+
