--- a/20171007_orleans.md
+++ b/20171007_orleans.md
@@ -53,7 +53,6 @@ __Liveness__
 
 The liveness is what defines how do silos know about other silos joining the cluster or being alive/dead. In reliable environment, the liveness implemented through a membership table stored in a reliable structure such as SQLserver or ZooKeeper. But during development, the liveness is provided by a membership table stored in the state of a grain, inside the `primary` silo (which is also the seed node). 
 
-
 Now that we had an overview of what elements compose an Orleans application, we can start to see how it works together.
 
 ## 3. How does it work?
@@ -67,5 +66,10 @@ Availability of silos gateways is provided by the membership table. The membersh
 Within the cluster, silos are responsible for checking if their siblings are still alive, if unresponsive, they will mark them as dead.
 _More details about the [protocol can be found on Orleans documentation](https://dotnet.github.io/orleans/Documentation/Runtime-Implementation-Details/Cluster-Management.html)._
 The membership table helps in notifying dead nodes but it also helps in notifying silos about new silos joining the cluster therefore making new gateways available to clients.
+
+To summarize, the membership table is updated by silos, consulted by silos in order to know which of their siblings are still in the cluster and if new silos joined the cluster, consulted by clients to know what are the available gateways to get grains from. 
 Those concepts are the key for scalability, by spawning new silos, we can handle a very large amount of logic executed in grains scattered among silos which are separate process which could be running in different nodes (VMs).
 
+# Conclusion
+
+Today we saw some of the keywords which can be seen in Orleans framework and documentation. We also had a general idea of the motivations behind Orleans and how silos 
