--- a/20171007_orleans.md
+++ b/20171007_orleans.md
@@ -72,4 +72,4 @@ Those concepts are the key for scalability, by spawning new silos, we can handle
 
 # Conclusion
 
-Today we saw some of the keywords which can be seen in Orleans framework and documentation. We also had a general idea of the motivations behind Orleans and how silos 
+Today we saw some of the keywords which can be seen in Orleans framework and documentation. We also had a general idea of what Orleans is and how it works. In the next part, we will see how we can implement a simplistic application with one silo and one client with membership table grain. Hope you enjoyed this post as much as I enjoyed writing it. See you next time!
