--- a/20171007_orleans.md
+++ b/20171007_orleans.md
@@ -1,4 +1,4 @@
-# Microsoft Orleans part 1
+# Microsoft Orleans (Microsoft Orleans Part 1)
 
 Microsoft Orleans is a framework used to build scalable distributed systems. It reduces the complexity of distributed system by abstracting away concurrency issues together with state management. Processes can then be run on multiple instances and form a cluster, they can be hosted on different environment and be scaled up and down on demand.
 Today I will give a broad overview of the concepts utilized and developed by the team behind Orleans. This post will be compose by 3 parts:
