--- a/20171104_swagger.md
+++ b/20171104_swagger.md
@@ -12,34 +12,83 @@ Today we will see how we can integrate Swagger in 3 parts:
 
 ## 1. Add Swagger to ASP NET Core project
 
-We start first by creating an empty ASP NET Core project.
-Then we add Mvc library and modify the startup
+We start first by creating an empty ASP NET Core project with the following startup:
 
 ```
-Mvc
+public class Startup
+{
+    public void ConfigureServices(IServiceCollection services)
+    {
+        services.AddMvc();
+    }
+
+    public void Configure(IApplicationBuilder app, IHostingEnvironment env, ILoggerFactory loggerFactory)
+    {
+        loggerFactory.AddConsole().AddDebug();
+
+        if (env.IsDevelopment())
+        {
+            app.UseDeveloperExceptionPage();
+        }
+
+        app.UseMvcWithDefaultRoute();
+    }
+}
 ```
 
-```
-Startup cs
-```
-
-We can then add a controller with one endpoint:
+We can then add a controller with few endpoints. For example we can create a `BankAccount` controller with deposit and withdraw functionalities:
 
 ```
-Controller
+[Route("BankAccount")]
+public class BankAccountController: Controller
+{
+    [HttpPost("{accountName}/Deposit")]
+    public IActionResult Deposit(string accountName, [FromBody]double amount) => Ok();
+
+    [HttpPost("{accountName}/Withdraw")]
+    public IActionResult Withdraw(string accountName, [FromBody]double amount) => Ok();
+
+    [HttpGet("{accountName}")]
+    [ProducesResponseType(typeof(double), 200)]
+    public IActionResult Get(string accountName) => Ok(balance);
+}
 ```
 
-Next we add swashbuckle swagger.
+Next in order to add Swagger, we need to add Swashbuckle.AspNetCore.
 
 ```
+Install-Package Swashbuckle.AspNetCore
 ```
 
-And register it on the services:
+This will install the necessary libraries to use Swagger.
+Then we register it on the services using the extension method `AddSwaggerGen()`:
+
+```    
+public void ConfigureServices(IServiceCollection services)
+{
+    services.AddMvc();
+    services.AddSwaggerGen(c =>
+    {
+        c.SwaggerDoc("api-v1", new Info { Title = "Example API", Version = "v1" });
+    });
+}
+```
+
+The swagger document registration will autogenerate the swagger.json and make it available at `/swagger/{name}/swagger.json`.
+Lastly we register both middlewares, the one creating the swagger.json and the one making the GUI available:
 
 ```
+app.UseSwagger();
+app.UseSwaggerUI(c =>
+{
+    c.SwaggerEndpoint("/swagger/api-v1/swagger.json", "Example API v1");
+});
 ```
 
-Once our application is started, we will be able access swagger UI endpoint and we will see our endpoints listed.
+Once our application is started, we will be able access Swagger GUI endpoint `/swagger` and we will see our endpoints listed.
+
+![swagger]()
+
 From there we can easily view all our endpoints and see if changes must be made. We can also directly test from here. Lastly our parameters are  discovered together with their class schema which are displayed as example.
 This allows us to quickly iterate over the design of our API but most of the APIs include protected endpoints. We will see next how to handle it.
 
