--- a/20171104_swagger.md
+++ b/20171104_swagger.md
@@ -87,34 +87,95 @@ app.UseSwaggerUI(c =>
 
 Once our application is started, we will be able access Swagger GUI endpoint `/swagger` and we will see our endpoints listed.
 
-![swagger]()
+![swagger](https://raw.githubusercontent.com/Kimserey/BlogArchive/master/img/20171104_swagger/swagger_gui.PNG)
 
-From there we can easily view all our endpoints and see if changes must be made. We can also directly test from here. Lastly our parameters are  discovered together with their class schema which are displayed as example.
-This allows us to quickly iterate over the design of our API but most of the APIs include protected endpoints. We will see next how to handle it.
+From there we can easily view all our endpoints and see if changes must be made. We can also directly test from here. Lastly our parameters are  discovered together with their class schema which are displayed as example. This allows us to quickly iterate over the design of our API. So far, we have only seen how to access unprotected endpoints.
+The next step is to configure Swagger to add authentication.
 
 ## 2. Handle authentication
 
 In order to authenticate the calls, we need to be able to add the authentication header to the requests.
 
-This can simply be done by adding the security definition in the Swagger gen service registration:
+This can simply be done by adding the security definition in the swagger gen service registration:
 
 ```
 services.AddSwaggerGen(c =>
-            {
-                c.AddSecurityDefinition("Bearer", new ApiKeyScheme
-                {
-                    Name = "Authorization",
-                    In = "header"
-                });
+{
+    c.AddSecurityDefinition("Bearer", new ApiKeyScheme
+    {
+        Name = "Authorization",
+        In = "header"
+    });
 
-                c.OperationFilter<FileOperation>();
-                c.SchemaFilter<PatchSchema>();
-
-                c.SwaggerDoc("expenseking", new Info());
-            });
+    c.SwaggerDoc("api-v1", new Info { Title = "Example API", Version = "v1" });
+});
 ```
 
-After that from the top of the Swagger UI, we will be able to add the bearer token for all endpoints.
+The `ApiKeyScheme` is meant to be used to authenticated calls from api to api using an API key. But we can use it as a quick hack to allow adding a bearer authorization for the whole API by specifying the header as `Authorization` and simply passing a `Bearer token`. After that from the top of the Swagger GUI, we will be able to click on `Authorize` and add the bearer token in the ApiKeyScheme configuration.
+The problem with this is that we will need an external way to authenticate and get the token before we can input it inside Swagger. 
+
+__How to authenticate from Swagger GUI with Identity server?__
+
+_I am assuming that we already have Identity server preconfigured and running on implicit flow. If you are sure about Identity server, you can have a look at one of my previous blog post - [Implicit flow with Identity Server](https://kimsereyblog.blogspot.sg/2017/09/implicit-flow-with-identity-server-and.html)._
+
+Swagger has an implementation of the OAuth2 mechanism to authenticate using the `OAuth2Scheme`. In order to get it to work, we must configure the following:
+
+1. Configure the scheme in swagger gen
+2. Configure the swagger client GUI information such as clientId and clientSecret
+3. Register the swagger client as a client of our application on our Identity server 
+
+We start first by configuring the swagger gen:
+
+```
+c.AddSecurityDefinition("oauth2", new OAuth2Scheme
+{
+    AuthorizationUrl = "http://localhost:5000/connect/authorize",
+    Flow = "implicit",
+    TokenUrl = "http://localhost:5000/connect/token",
+    Scopes = new Dictionary<string, string> { { "my-api-scope-in-identity", "A description of my API" } }
+});
+```
+
+Next we configure the client information from the application builder using `ConfigureOAuth2`:
+
+```
+app.UseSwaggerUI(c =>
+{
+    c.ConfigureOAuth2(
+        "swagger",  // the client id
+        "swagger-secret", 
+        "swagger-realm", 
+        "Swagger");
+
+    c.SwaggerEndpoint(
+        "/swagger/api-v1/swagger.json", 
+        "API v1");
+}
+```
+
+Lastly we need to register our Swagger client in Identity Server configuration:
+
+```
+new Client
+{
+    ClientId = "swagger", // the client id
+    ClientName = "Swagger",
+    ClientSecrets = { new Secret("swagger-secret") },
+    AllowedGrantTypes = GrantTypes.Implicit,
+    AllowAccessTokensViaBrowser = true,
+    AllowedCorsOrigins = { "http://localhost:5300" },
+    AllowRememberConsent = true,
+    AllowedScopes =
+    {
+        "ek-api"
+    },
+    RedirectUris = { "http://localhost:5300/swagger/o2c.html" }
+}
+```
+
+Once the configuration is done we should be able to authenticate from Swagger, get redirected to our Identity Server endpoint to login, accept consent and get redirected back to our Swagger GUI where all endpoints protected should be accessible.
+
+![authentication]()
 
 ## 3. Handle endpoints specificities with filters
 
