--- a/20171104_swagger.md
+++ b/20171104_swagger.md
@@ -175,22 +175,55 @@ new Client
 
 Once the configuration is done we should be able to authenticate from Swagger, get redirected to our Identity Server endpoint to login, accept consent and get redirected back to our Swagger GUI where all endpoints protected should be accessible.
 
-![authentication]()
+![authentication](https://raw.githubusercontent.com/Kimserey/BlogArchive/master/img/20171104_swagger/swagger_auth.PNG)
 
 ## 3. Handle endpoints specificities with filters
 
-Swagger UI is actually built from the swagger.json auto generated. But there are times where it is not possible to auto generate the endpoint. 
+Swagger GUI is built from `swagger.json` which is auto generated. There are instances where it is not possible to auto generate the endpoint properly. 
 For example, the handling of files formdata. If we have an endpoint taking files as input:
 
 ```
+[HttpPost("Upload")]
+public IActionResult Upload([FromForm]IEnumerable<IFormFile> files) => Ok();
 ```
 
 The following representation is generated:
 
 ```
+"/Bank/Upload": {
+    "post": {
+    "tags": [
+        "BankAccount"
+    ],
+    "operationId": "BankUploadPost",
+    "consumes": [],
+    "produces": [],
+    "parameters": [
+        {
+        "name": "files",
+        "in": "formData",
+        "required": false,
+        "type": "array",
+        "items": {},
+        "collectionFormat": "multi"
+        }
+    ],
+    "responses": {
+        "200": {
+        "description": "Success"
+        }
+    }
+    }
+}
+}
 ```
 
-It is not really useful. What we want is to be able to have a file input to directly upload a file from Swagger UI. In order to do that we will use an __OperationFilter__. An operation filter runs through all operations which we can then filter the one we wish to modify.
+It is not really useful as `type` is set as an array. 
+This get represented as followed:
+
+![swagger file]()
+
+What we want is to be able to have a file input to directly upload a file from Swagger UI. In order to do that we will use an __OperationFilter__. An operation filter runs through all operations which we can then filter the one we wish to modify.
 
 ```
 ```
