--- a/20171104_swagger.md
+++ b/20171104_swagger.md
@@ -200,38 +200,95 @@ The following representation is generated:
     "produces": [],
     "parameters": [
         {
-        "name": "files",
-        "in": "formData",
-        "required": false,
-        "type": "array",
-        "items": {},
-        "collectionFormat": "multi"
+            "name": "files",
+            "in": "formData",
+            "required": false,
+            "type": "array",
+            "items": {},
+            "collectionFormat": "multi"
         }
     ],
     "responses": {
         "200": {
-        "description": "Success"
+            "description": "Success"
         }
     }
     }
-}
 }
 ```
 
 It is not really useful as `type` is set as an array. 
 This get represented as followed:
 
-![swagger file]()
+![swagger file](https://raw.githubusercontent.com/Kimserey/BlogArchive/master/img/20171104_swagger/swagger_file.PNG)
 
 What we want is to be able to have a file input to directly upload a file from Swagger UI. In order to do that we will use an __OperationFilter__. An operation filter runs through all operations which we can then filter the one we wish to modify.
 
 ```
+public class FileOperation : IOperationFilter
+{
+    public void Apply(Operation operation, OperationFilterContext context)
+    {
+        if (operation.OperationId == "BankUploadPost")
+        {
+            operation.Parameters = new List<IParameter>
+            {
+                new NonBodyParameter
+                {
+                    Name = "files",
+                    Required = true,
+                    Type = "file",
+                    In = "formData"
+                }
+            };
+        }
+    }
+}
 ```
 
-We are filtering using the endpoint name then we set the parameter as formData file.
-There are 2 types of parameters, BodyParameter which is a json object and NonBodyParamerer. Here we set the parameter type as file in formData. We should now see the filr input.
+There are 2 types of parameters, `BodyParameter` which is a json object and `NonBodyParameter` which allows us to set whatever we need to alter the `swagger.json`.
+Then we register it in the swagger gen:
 
-Image
+```
+services.AddSwaggerGen(c =>
+{
+    c.OperationFilter<FileOperation>();
+    
+    // ... rest of the config
+}
+```
+
+We are filtering using operationId `BankUploadPost` which is found in the `swagger.json` then we set the parameter as formData file. This then generate the following:
+
+```
+"/Bank/Upload": {
+    "post": {
+        "tags": [
+            "BankAccount"
+        ],
+        "operationId": "BankUploadPost",
+        "consumes": [],
+        "produces": [],
+        "parameters": [
+            {
+                "name": "files",
+                "in": "formData",
+                "required": true,
+                "type": "file"
+            }
+        ],
+        "responses": {
+            "200": {
+                "description": "Success"
+            }
+        }
+    }
+}
+```
+
+This json now results in the following form file input:
+
+![swagger file input]()
 
 Another example would be if we have a string value which can be a particular set of data:
 
