--- a/20171104_swagger.md
+++ b/20171104_swagger.md
@@ -339,7 +339,7 @@ public class PropertySchema : ISchemaFilter
                     value = "string"
                 },
                 new {
-                    type = "value",
+                    type = "age",
                     value = "number"
                 }
             };
@@ -362,7 +362,9 @@ services.AddSwaggerGen(c =>
 
 Now our sample on Swagger UI will be as followed:
 
-![swagger example modified]()
+![swagger example modified](https://raw.githubusercontent.com/Kimserey/BlogArchive/master/img/20171104_swagger/swagger_example_modified_1.PNG)
+
+The example now is much more useful as it specifies that the `type` can be either `name` or `age` and for `name` the value must be string while for `age` the value is a number.
 
 # Conclusion
 
