--- a/20171104_swagger.md
+++ b/20171104_swagger.md
@@ -1,4 +1,4 @@
-# Swagger
+# Swagger for ASP NET Core API development
 
 Building a web API is not an easy task. In order to build one easy to use, we need to consider the routes, the HTTP methods, the return results from the endpoints,  the parameter used for the body of the requests, etc...
 Swagger is a tool which compiles all our ApI endpoints into a user friendly UI and allows us to directly test our endpoints from the UI.
@@ -167,7 +167,7 @@ new Client
     AllowRememberConsent = true,
     AllowedScopes =
     {
-        "ek-api"
+        "my-api"
     },
     RedirectUris = { "http://localhost:5300/swagger/o2c.html" }
 }
