--- a/20171110_REST.md
+++ b/20171110_REST.md
@@ -1,4 +1,4 @@
-# RESTful system
+# REST - Representational State Transfer
 
 Since the past 5 years, there has been an increasing demand to know how to build RESTful Web Services. Never had a job interview for Software Engineering failed to include at least one question about REST or RESTful Web Services and never a week passed with at least hearing one comment like _"if we do x, it will not be RESTful"_. Everyone seems to be on top of it, know everything about REST. 
 But is it true? Do they really know REST? How certain can one be that her system is RESTful? 
@@ -53,17 +53,25 @@ I could go on and on. I am highly confident that you might at least encountered 
 2. We associated REST with the definition of URLs
 3. We associated REST with the HTTP protocol definition of its methods (POST vs PUT)
 
-The promise of REST is actually a set of principales:
+REST - representational state transfer, is not related to any HTTP verb nor is it tied to how URLs look like. In fact, __REST is not related to HTTP.__
+REST is a set of guidelines which if followed will yield the benefits promise for a RESTful system. REST is not a protocol, not a standard, and it is the reason why the common understanding of it has diverged over the years.
+
+REST is actually a set of principales:
 
 __Client-server architecture__
+The client and server are decoupled. They follow a different lifecycle and can eveolve independentely of each other.
 
 __Statelessness__
+Each request to the server is stateless. All information needed to perform the action at the server is provided by the client. In other words, all inputs are provided by the client for the server to perform its task.
 
 __Cacheability__
+Resources provided by your interface will provide their cacheability which will allow any, server or client, to cache the resource.
 
 __Layered system__
+The client will not know the concrete server targeted. All access are abstracted by the interface (API). The client might be talking to a reverse proxy or to an authentication server or to your own server without knowing it, all being routed from a common interface.
 
 __Uniform interface__
+
 
 ## 2. Build a REST/Web API with ASPNET Core
 
