--- a/20171110_REST.md
+++ b/20171110_REST.md
@@ -6,7 +6,7 @@ Today I would like to share my point of view about REST by going through tree po
 
 ```
 1. Overview
-2. Build a RESTful Web API with ASPNET Core
+2. How does REST links with HTTP protocol
 3. What have we learnt
 ```
 
@@ -65,7 +65,7 @@ __Statelessness__
 Each request to the server is stateless. All information needed to perform the action at the server is provided by the client. In other words, all inputs are provided by the client for the server to perform its task.
 
 __Cacheability__
-Resources provided by your interface will provide their cacheability which will allow any, server or client, to cache the resource.
+Resources provided by your interface will provide their cacheability settings which will allow any server or client to know how to cache them.
 
 __Layered system__
 The client will not know the concrete server targeted. All access are abstracted by the interface (API). The client might be talking to a reverse proxy or to an authentication server or to your own server without knowing it, all being routed from a common interface.
@@ -74,7 +74,15 @@ __Uniform interface__
 Resources can be accessed through URIs. There should be a common approach to access them and to act on them which is familiar with all other APIs. Each resource should have only one logical URI and when fetched, it should return links which points to related resources.
 The client should be able to discover the whole API content by navigating from the root (HATEOAS). 
 
-## 2. Build a REST/Web API with ASPNET Core
+## 2. How does REST links with HTTP protocol
+
+If REST is not related to HTTP, why is everyone linking them together and interchanging them? 
+Even if we look at the big players, Google, Airbnb, Uber, etc..., we can see how they too link both concepts together. 
+
+__For example the following quote can be found in Uber API documentation:__
+> The Uber API is a RESTful API. This means that the API is designed to allow you to get, create, update, & delete objects with the HTTP verbs GET, POST, PUT, PATCH, & DELETE.
+
+
 
 ## 3. What have we learnt
 
