--- a/20171110_REST.md
+++ b/20171110_REST.md
@@ -42,7 +42,7 @@ Or another example:
 
 ```
 A: We need to have an endpoint to start process X
-B: Ok let's do; POST /processes/X/start
+B: Ok let's do POST /processes/X/start
 A: Should we use POST or PUT?
 B: If we follow REST, we will use PUT
 ```
@@ -82,9 +82,38 @@ Even if we look at the big players, Google, Airbnb, Uber, etc..., we can see how
 __For example the following quote can be found in Uber API documentation:__
 > The Uber API is a RESTful API. This means that the API is designed to allow you to get, create, update, & delete objects with the HTTP verbs GET, POST, PUT, PATCH, & DELETE.
 
+The reason why REST is associated with HTTP protocol is that the HTTP protocol itself, if implemented in a certain way, answers part of the requirements of a RESTful service. Over the years it has become a default protocol to be used to build RESTful services and terminology has been mixed now speaking about RESTful APIs while speaking about HTTP web services respecting partially REST architecture.
 
+The HTTP protocol is a well established protocol and [extremely well documented](https://developer.mozilla.org/en-US/docs/Web/HTTP). Implementing it allows;
+1. __client-server segregation__ by being the middle layer between client and server
+2. it is inherently __stateless__
+3. it contains all __caching headers to allow clients to know how to cache resources__
+4. it __abstracts away the physical location of the server__
+5. it provides HTTP methods which can be used to create __a logical interface which can be similar in all other APIs__
+
+The only part which the HTTP protocol does not enforce is the implementation of a __uniform interface__ and it is the origin of all the confusion. HTTP protocol does not dictate:
+1. how someone would use GET or PATCH
+2. how one should use the caching headers
+3. what form should the response given back to the caller look alike
+
+All this is what REST provides. It is a description of an architecture where HTTP can be used for the transport layer ~ because it's conveniant.
 
 ## 3. What have we learnt
 
-Is my "API RESTful"? To be honest, it doesn't matter. The answer I will give you depend on which side you are in. If you are on the side which state that RESTful API should include HATEOAS, then my answer will be __no__. In fact it would mean that I have never built any RESTful system. But if you are on the side which consider your service RESTful even though it does not implement all aspect of REST, then my answer will be __maybe__. Why maybe? Simply because similarly, can I even call my system RESTful if I do not implement any aspect of "uniform interface", worse can I even call my system RESTful if it is partially representated as state transition?
+Is my "API RESTful"? 
+To be honest, it doesn't matter. 
+The answer I will give you depend on which side you are in. 
 
+- If you are on the side which state that RESTful API should include HATEOAS, then my answer will be __no__.  In fact it would mean that I have never built any RESTful system.
+- If you are on the side which consider your service RESTful even though it does not implement all aspect of REST, then my answer will be __maybe__. 
+
+Why maybe? Simply because similarly, can I even call my system RESTful if I do not implement some aspects of the __uniform interface__, worse can I even call my system RESTful if it is partially represented as state transition?
+
+
+
+# Conclusion
+
+Today is a big day, my 100th post! I wanted to touch this subject about REST and its misconception. The message that I wanted to transmit is that there isn't any right or wrong. There isn't any side to choose. All that matters is how we master our own APIs. 
+How we provide to our users a unified way accross all our endpoints to understand and discover our APIs functionalities and best is if they can themselves guess what sort of functionalities we provide. 
+REST provides a handful set of guidelines which, if followed, yield nicely built APIs. 
+But so far, I have never built a truely 100% RESTful web service and I suspect most of us have not. Anyway all I am saying is that it doesn't matter. Maybe one day I will realize that it does actually matter, until then, what matters to me is how comfortable are the users of my APIs. Hope you enjoyed this post as much as I enjoyed writting it! See you next time!
