--- a/20171110_REST.md
+++ b/20171110_REST.md
@@ -2,11 +2,11 @@
 
 Since the past 5 years, there has been an increasing demand to know how to build RESTful Web Services. Never had a job interview for Software Engineering failed to include at least one question about REST or RESTful Web Services and never a week passed with at least hearing one comment like _"if we do x, it will not be RESTful"_. Everyone seems to be on top of it, know everything about REST. 
 But is it true? Do they really know REST? How certain can one be that her system is RESTful? 
-Today I would like to share my point of view about REST by going through tree points:
+Today I would like to share my point of view about REST by going through three points:
 
 ```
 1. Overview
-2. How does REST links with HTTP protocol
+2. How does REST link with HTTP protocol
 3. What have we learnt
 ```
 
