--- a/20171110_REST.md
+++ b/20171110_REST.md
@@ -47,16 +47,14 @@ A: Should we use POST or PUT?
 B: If we follow REST, we will use PUT
 ```
 
-I could go on and on. I am highly confident that you might at least encountered one of those scenarios. There are fundamental flaws in the understanding of REST.
+I could go on and on. I am highly confident that you might havw at least encountered one of those scenarios. Those discussions showcase fundamental flaws in the understanding of REST.
 
-1. We reduced the definition of REST to the usage of HTTP methods
+1. We reduced the definition of REST to the usage of HTTP methods for example POST vs PUT
 2. We associated REST with the definition of URLs
-3. We associated REST with the HTTP protocol definition of its methods (POST vs PUT)
+3. We associated REST with HTTP
 
 REST - representational state transfer, is not related to any HTTP verb nor is it tied to how URLs look like. In fact, __REST is not related to HTTP.__
-REST is a set of guidelines which if followed will yield the benefits promise for a RESTful system. REST is not a protocol, not a standard, and it is the reason why the common understanding of it has diverged over the years.
-
-REST is actually a set of principales:
+REST is a set of guidelines which if followed will yield the benefits promise for a RESTful system. REST is not a protocol, not a standard, REST is a set of principles:
 
 __Client-server architecture__
 The client and server are decoupled. They follow a different lifecycle and can eveolve independentely of each other.
