--- a/20171110_REST.md
+++ b/20171110_REST.md
@@ -57,7 +57,7 @@ REST - representational state transfer, is not related to any HTTP verb nor is i
 REST is a set of guidelines which if followed will yield the benefits promise for a RESTful system. REST is not a protocol, not a standard, REST is a set of principles:
 
 __Client-server architecture__
-The client and server are decoupled. They follow a different lifecycle and can eveolve independentely of each other.
+The client and server are decoupled. They follow a different lifecycle and can evolve independentely of each other.
 
 __Statelessness__
 Each request to the server is stateless. All information needed to perform the action at the server is provided by the client. In other words, all inputs are provided by the client for the server to perform its task.
