--- a/20171110_REST.md
+++ b/20171110_REST.md
@@ -69,7 +69,7 @@ __Layered system__
 The client will not know the concrete server targeted. All access are abstracted by the interface (API). The client might be talking to a reverse proxy or to an authentication server or to your own server without knowing it, all being routed from a common interface.
 
 __Uniform interface__
-Resources can be accessed through URIs. There should be a common approach to access them and to act on them which is familiar with all other APIs. Each resource should have only one logical URI and when fetched, it should return links which points to related resources.
+Resources can be accessed through URIs. There should be a common approach to access them and to act on them which is familiar with all other APIs. Each resource should have only one logical URI and when fetched, should return links which points to related resources.
 The client should be able to discover the whole API content by navigating from the root (HATEOAS). 
 
 ## 2. How does REST links with HTTP protocol
